issue #97 - added global css styling for page width - decreased page width to 1060px - aligned content in answer page

--- a/stack_overfull/frontend/src/components/SignUpForm/index.css
+++ b/stack_overfull/frontend/src/components/SignUpForm/index.css
@@ -4,7 +4,6 @@
     background-color: white;
     position: fixed;
     padding-top: 40px;
-    top: 0px;
 }
 
 .login-form-forgot {
